--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>CodeCats</title>
+    <title>NOIR ARTIST - HYBRIDE</title>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -23,7 +23,7 @@
         </div>
         <div class="menu">
           <a
-            href="https://discord.gg/A9CnsVzzkZ"
+            href="https://discord.gg/XPcsjWUV"
             target="_blank"
             rel="noopener noreferrer"
           >
@@ -37,7 +37,7 @@
             <img src="images/header/twitter.webp" alt="Twitter" />
           </a>
           <a
-            href="https://opensea.io/collection/codecats"
+            href="https://opensea.io/collection/noirartist"
             target="_blank"
             rel="noopener noreferrer"
           >
@@ -56,33 +56,33 @@
         <ul
           id="countdown"
           class="count-down"
-          data-date="Feb 17, 2022 4:00:00 PM UTC"
+          data-date="May 28, 2022 4:00:00 PM UTC"
         >
           <li class="clock-item">
-            <span class="count-number days">20</span>
-            <p class="count-text">Days</p>
+            <span class="count-number days">30</span>
+            <p class="count-text">Jours</p>
           </li>
 
           <li class="clock-item">
-            <span class="count-number hours">20</span>
-            <p class="count-text">Hour</p>
+            <span class="count-number hours">24</span>
+            <p class="count-text">Heures</p>
           </li>
 
           <li class="clock-item">
-            <span class="count-number minutes">20</span>
+            <span class="count-number minutes">60</span>
             <p class="count-text">Min</p>
           </li>
 
           <li class="clock-item">
-            <span class="count-number seconds">20</span>
+            <span class="count-number seconds">60</span>
             <p class="count-text">Sec</p>
           </li>
         </ul>
-        <h1>NFT Drop Coming Soon!!</h1>
+        <h1>NFT Collection HYBRIDE par NOIR ARTIST!!</h1>
                
-        <p>A new batch of cute cats will be available very soon!</p>
-        <a href="https://discord.gg/A9CnsVzzkZ" target="_blank" rel="noopener noreferrer" class="hero-btn btn"
-          ><span>Join the Catmmunity</span>
+        <p>Retrouvez les aussi à la gallerie LIERHMANN!</p>
+        <a href="https://discord.gg/XPcsjWUV" target="_blank" rel="noopener noreferrer" class="hero-btn btn"
+          ><span>Rejoignez la communauté</span>
         </a>
       </div>
     </section>
