--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </ul>
         <h1>NFT Collection HYBRIDE par NOIR ARTIST!!</h1>
                
-        <p>Retrouvez les aussi à la gallerie LIERHMANN!</p>
+        <p>Retrouvez les aussi à la gallerie LIERHMANN</p>
         <a href="https://discord.gg/XPcsjWUV" target="_blank" rel="noopener noreferrer" class="hero-btn btn"
           ><span>Rejoignez la communauté</span>
         </a>
